2009-10-01  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-set-tags-to): New command.

	* org-latex.el (org-export-latex-set-initial-vars): Also check in
	the plist.

	* org.el (org-additional-option-like-keywords): Add LATEX_CLASS
	keyword.

	* org-exp.el (org-infile-export-plist): Add LATEX_CLASS keyword.

2009-10-01  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-inlinetask.el (org-inlinetask-export): Option removed.
	(org-inlinetask-export-handler): Better export.

	* org-xoxo.el (org-export-xoxo-final-hook): New hook.
	(org-export-as-xoxo): Run the new hook.

	* org-html.el (org-export-html-final-hook): New hook.
	(org-export-as-html): Run the new hook.

	* org-docbook.el (org-export-docbook-final-hook): New hook.
	(org-export-as-docbook): Run the new hook.

	* org-ascii.el (org-export-ascii-final-hook): New hook.
	(org-export-as-ascii): Run the new hook.

	* org-latex.el (org-export-latex-treat-sub-super-char): Allow a
	space character as the character before the ^/_.
	(org-export-latex-final-hook): New hook.
	(org-export-as-latex): Run `org-export-latex-final-hook'.

2009-10-01  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-macs.el (org-if-unprotected-at): Fix docstring.

	* org-agenda.el (org-agenda-change-all-lines): Handle invisible
	text in the prefix (if category is a link).

	* org-latex.el (org-export-latex-preprocess): Deal properly with
	empty lines in verse environments.

	* org.el (org-format-latex-header): Inline fullpage.sty.

	* org-footnote.el (org-footnote-create-definition): Reveal context
	to add a new footnote definition.

	* org.el (org-ctrl-c-ctrl-c): Pass prefix arg to
	org-table-recalculate when cursor is in TBLFM line.

	* org-list.el (org-renumber-ordered-list): Fix cursor position
	when bullet length has changed.

2009-10-01  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-format-latex): Mention `org-format-latex-options' in
	the docstring.
